@@ -1259,7 +1259,7 @@
 //-- RA_FEARBREEZE
 2234,2000,0,0,0,60000:90000:120000:150000:180000,0
 //-- RA_AIMEDBOLT
-2236,4000,1000,0,0,0,0
+2236,5000,1000,0,0,0,0
 //-- RA_DETONATOR
 2237,0,0,0,0,1000,0
 //-- RA_ELECTRICSHOCKER
@@ -1273,7 +1273,7 @@
 //-- RA_WUGDASH
 2242,0,2000,0,0,0,0
 //-- RA_WUGBITE
-2244,0,1000,5000,0,10000,0
+2244,0,1000,5000,0,20000,10000
 //-- RA_SENSITIVEKEEN
 2246,0,3000,0,0,0,0
 //-- RA_CAMOUFLAGE
