@@ -368,13 +368,12 @@ enum {
 	ST_RECOV_WEIGHT_RATE,
 	ST_MOVE_ENABLE,
 	ST_WATER,
-	ST_RIDINGDRAGON,
-	ST_WARG,
-	ST_RIDINGWARG,
-	ST_RIDEWARG,
-	ST_WEAPONBLOCKING,
-	ST_POISONINGWEAPON,
-	ST_ROLLINGCUTTER,
+	//ST_RIDINGDRAGON,
+	ST_WUG = 16,
+	ST_RIDINGWUG,
+	//ST_WEAPONBLOCKING,
+	//ST_POISONINGWEAPON,
+	//ST_ROLLINGCUTTER,
 };
 
 enum e_skill {
