@@ -6,6 +6,11 @@
 //========================================
 
 12/23/2009
+	r69 [Jobbie]
+	* Added the rest of Rangers skills. Does not include Camouflage, Sensitivekeen and Fearbreeze.
+	* Removed Electric Shocker from Researchtrap list to increase range. Should not affect boss monster.
+	* Fixed Epiclesis not giving properly the MaxHP bonus.
+
 	r68 [pakpil]
 	* Fixed Burning status:
 	- Map-server crash when someone dies with Burning.
